<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_create_msm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_msm"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <View
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="2dip"
        android:background="@color/colorPrimaryDark"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/definition"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dip"
                android:background="@color/colorPrimary" />

            <EditText
                android:id="@+id/textInputEditTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/description"
                android:autofillHints="@string/description"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <Spinner
                android:id="@+id/popup_spinner_msm_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:entries="@array/type_array"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_family"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <RadioGroup
                    android:id="@+id/radioGroup_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radioButtonIPv4"
                        android:layout_width="194dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ipv4" />

                    <RadioButton
                        android:id="@+id/radioButtonIPv6"
                        android:layout_width="194dp"
                        android:layout_height="wrap_content"
                        android:text="@string/ipv6" />
                </RadioGroup>

            <EditText
                android:id="@+id/textInputEditTextTarget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:autofillHints="@string/target"
                android:hint="@string/target" />

            <TextView
                android:id="@+id/probes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/probes"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dip"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <Spinner
                android:id="@+id/popup_spinner_probes_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                android:entries="@array/probe_type_array"/>

            <AutoCompleteTextView
                android:id="@+id/autocomplete_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/value"
                android:autofillHints="@string/value"
                android:completionThreshold="1" />

            <EditText
                android:id="@+id/textInputEditTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numberOfProbes"
                android:autofillHints="@string/numberOfProbes"
                android:inputType="number" />

            <TextView
                android:id="@+id/timing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timing"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dip"
                android:background="@color/colorPrimary" />

            <Switch
                android:id="@+id/switch_one_off"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:text="@string/one_off" />

            <EditText
                android:id="@+id/textInputEditTextStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/start"
                android:autofillHints="@string/start"
                android:visibility="visible"/>

            <EditText
                android:id="@+id/textInputEditTextStopTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/stop"
                android:autofillHints="@string/stop"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/apiKeys"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/api_key"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dip"
                android:background="@color/colorPrimary" />

            <Spinner
                android:id="@+id/popup_spinner_api_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/api_key"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
