<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_add_msm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_msm"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <View
        android:id="@+id/line"
        android:layout_height="2dip"
        android:layout_width="wrap_content"
        android:layout_below="@+id/popup_title"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/popup_subtitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line"
        android:text="@string/api_key"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <Spinner
        android:id="@+id/popup_spinner_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popup_subtitle1"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>
    <TextView
        android:id="@+id/popup_subtitle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popup_spinner_api_key"
        android:text="@string/msm"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <Spinner
        android:id="@+id/popup_spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popup_subtitle2"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/msm_array"/>

    <EditText
        android:id="@+id/popup_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popup_spinner2"
        android:inputType="number"
        android:hint="@string/id"
        android:autofillHints="@string/id"
        android:visibility="invisible"/>
</RelativeLayout>
