<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_msm_fragment_frame1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.measurement.ShowMeasurementFrame1">

    <ScrollView
        android:layout_width="fill_parent"
...
